use vim-go along side coc-go

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,6 @@
 {
     "python.jediEnabled": false,
-    "html.autoClosingTags": true
+    "go.goplsOptions": {
+        "completeUnimported": true
+    }
 }
