set zsh as default shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,8 @@ setw -q -g utf8 on
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
+# default shell
+set -g default-shell /bin/zsh
 
 # -- display -------------------------------------------------------------------
 
