improve golang dev experience

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,6 +1,14 @@
 {
+    "languageserver": {
+        "golang": {
+            "command": "gopls",
+            "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
+            "filetypes": ["go"],
+            "initializationOptions": {
+                "usePlaceholders": true
+            }
+        }
+    },
     "python.jediEnabled": false,
-    "go.goplsOptions": {
-        "completeUnimported": true
-    }
+    "eslint.run": "onSave"
 }
