--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,6 +83,9 @@ bind -r C-h previous-window # select previous window
 bind -r C-l next-window     # select next window
 bind Tab last-window        # move to last active window
 
+# scroll
+setw -g mode-keys vi
+
 # -- list choice (tmux < 2.4) --------------------------------------------------
 
 # vi-choice is gone in tmux >= 2.4
