--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,7 +24,7 @@ setw -q -g utf8 on
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 # default shell
-set -g default-shell /bin/zsh
+# set -g default-shell /bin/zsh
 
 # -- display -------------------------------------------------------------------
 
