neovim true color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,9 @@ set -s focus-events on
 # Fix Ctrl+Arrow for PuTTY
 set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
 
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-x
@@ -23,8 +26,6 @@ setw -q -g utf8 on
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
-# default shell
-# set -g default-shell /bin/zsh
 
 # -- display -------------------------------------------------------------------
 
@@ -82,9 +83,6 @@ unbind p
 bind -r C-h previous-window # select previous window
 bind -r C-l next-window     # select next window
 bind Tab last-window        # move to last active window
-
-# scroll
-setw -g mode-keys vi
 
 # -- list choice (tmux < 2.4) --------------------------------------------------
 
