--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,10 +78,10 @@ bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
 
 # window navigation
-unbind n
-unbind p
-bind -r C-h previous-window # select previous window
-bind -r C-l next-window     # select next window
+# unbind n
+# unbind p
+# bind -r C-h previous-window # select previous window
+# bind -r C-l next-window     # select next window
 bind Tab last-window        # move to last active window
 
 # -- list choice (tmux < 2.4) --------------------------------------------------
