--- a/.tmux.conf
+++ b/.tmux.conf
@@ -161,8 +161,8 @@ set -g status-style fg=colour15,bg=default
 
 # -- window status -------------------------------------------------------------
 
-# normal tab
-set -g window-status-format " #I:#W #F "
+# normal (inactive) tab
+set -g window-status-format " #I:#W:#(~/sh/rename-window #{pane_pid}) #F "
 
 # current tab
 set -g window-status-current-format " #I:#W:#F "
