fix tmux status line

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -162,7 +162,7 @@ set -g status-style fg=colour15,bg=default
 # -- window status -------------------------------------------------------------
 
 # normal (inactive) tab
-set -g window-status-format " #I:#W:#(~/sh/rename-window #{pane_pid}) #F "
+set -g window-status-format " #I:#W:#(~/sh/rename-window #{pane_pid} 2>/dev/null) #F "
 
 # current tab
 set -g window-status-current-format " #I:#W:#F "
