switch to nvim lspconfig, remove deprecated plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,11 @@
 # -- general -------------------------------------------------------------------
 
-set -g default-terminal "screen-256color" # colors!
+set -g default-terminal "tmux-256color"   # colors!
+set-option -a terminal-features 'xterm-256color:RGB' # essential for neovim true colors
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
-
-# Fix Ctrl+Arrow for PuTTY
-set -g terminal-overrides "xterm*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
-
-set-option -sa terminal-overrides ',xterm-256color:RGB'
-
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
